[package]
name = "bffh"
version = "0.1.0"
authors = ["Gregor Reitzenstein <me@dequbed.space>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# TODO: reduce the feature groups for faster compilation
#tokio = { version = "0.2", features = ["full"] }

async-std = "1.5"
futures = "0.3"
futures-util = "0.3"
futures-signals = "0.3"

slog = "2.5"
slog-term = "2.5"
slog-async = "2.4"

capnp = "0.12"
capnp-rpc = "0.12"

toml = "0.5"
serde = "1"
serde_derive = "1"

casbin = "0.2"

[build-dependencies]
capnpc = "0.12"
