[package]
name = "bffh"
version = "0.1.0"
authors = ["Gregor Reitzenstein <me@dequbed.space>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# TODO: reduce the feature groups for faster compilation
#tokio = { version = "0.2", features = ["full"] }

async-std = "1.5"
futures = { version = "0.3", features = ["thread-pool", "compat"] }
futures-util = "0.3"
futures-signals = "0.3"

signal-hook = { version = "0.1", features = ["tokio-support"] }

slog = { version = "2.5", features = ["max_level_trace"] }
slog-term = "2.5"
slog-async = "2.4"

capnp = "0.12"
capnp-rpc = "0.12"

toml = "0.5"
serde = { version = "1.0", features = ["derive"] }

casbin = "0.2"

uuid = { version = "0.8", features = ["serde", "v4"] }

clap = "2.33"

[build-dependencies]
capnpc = "0.12"
